fix: fix #button tertiary icon position to be top aligned (except when used in table header)

--- a/packages/dnb-eufemia/src/components/global-status/style/_global-status.scss
+++ b/packages/dnb-eufemia/src/components/global-status/style/_global-status.scss
@@ -97,6 +97,13 @@
     left: auto;
 
     margin-top: 1rem;
+
+
+    .dnb-button__icon {
+      &.dnb-icon--medium {
+        margin-top: 0.25rem;
+      }
+    }
   }
   .dnb-modal__content__inner &__close-button {
     right: 0;
